[gd_scene load_steps=10 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Plank.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/flakes.png" type="Texture" id=3]
[ext_resource path="res://Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/fall.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 50, 50 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 6 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )
plank_scene = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Air" type="Polygon2D" parent="CanvasLayer"]
color = Color( 0.368627, 0.403922, 0.270588, 1 )
texture = ExtResource( 3 )
polygon = PoolVector2Array( 0, 0, 320, 0, 320, 480, 0, 480 )

[node name="Start" type="Area2D" parent="."]
position = Vector2( 160, 400 )

[node name="Polygon2D2" type="Polygon2D" parent="Start"]
color = Color( 0.368627, 0.403922, 0.270588, 1 )
texture_scale = Vector2( 0.5, 0.5 )
polygon = PoolVector2Array( -50, -50, 50, -50, 50, 50, -50, 50 )

[node name="Polygon2D" type="Polygon2D" parent="Start"]
color = Color( 0.12549, 0.12549, 0.12549, 1 )
texture_scale = Vector2( 0.5, 0.5 )
polygon = PoolVector2Array( -45, -45, 45, -45, 45, 45, -45, 45 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Start"]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Plank" parent="." instance=ExtResource( 2 )]
position = Vector2( 160, 360 )

[node name="Planks" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 160, 400 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
limit_bottom = 480

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer2"]
anchor_right = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = 14.0

[node name="HighScore" type="Label" parent="CanvasLayer2/MarginContainer"]
margin_right = 310.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.890196, 0.933333, 0.752941, 1 )
text = "BEST: 00"
align = 2

[node name="Score" type="Label" parent="CanvasLayer2/MarginContainer"]
margin_right = 310.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.890196, 0.933333, 0.752941, 1 )
text = "SCORE: 00"

[node name="Timer2" type="Timer" parent="."]
wait_time = 2.0
autostart = true
[connection signal="body_entered" from="Start" to="." method="_on_body_entered"]
[connection signal="body_exited" from="Start" to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
